--- a/assets/styles/scss/base/_base.scss
+++ b/assets/styles/scss/base/_base.scss
@@ -66,7 +66,7 @@ select {
   font-size: 2rem;
 }
 
-.main-container {
+.container {
   @include respond-to(desktop) {
     max-width: 1200px;
     margin: auto;
