--- a/assets/styles/scss/layout/_header.scss
+++ b/assets/styles/scss/layout/_header.scss
@@ -1,6 +1,7 @@
 .header {
   position: relative;
-  background-color: #f9f5f2;
+  // background-color: #f9f5f2;
+  background-color: pink;
   color: white;
   padding: 1.25em;
   display: flex;
