--- a/assets/styles/scss/layout/_main.scss
+++ b/assets/styles/scss/layout/_main.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 2em;
-  padding: 0 1.25em 0 1.15em;
+  padding: 0 1.25em 0 1.25em;
   min-height: 100vh;
 }
 
