--- a/assets/styles/scss/layout/_navigation.scss
+++ b/assets/styles/scss/layout/_navigation.scss
@@ -38,6 +38,7 @@
 
   li {
     padding: 0.75em;
+    border: 3px solid red;
   }
 
   a {
@@ -59,7 +60,7 @@
 }
 
 .dropdown i {
-  font-size: $f14;
+  font-size: $f20;
 }
 
 .submenu {
@@ -125,7 +126,8 @@
     }
 
     li {
-      // padding: 0;
+      display: flex;
+      align-items: center;
     }
 
     li a {
@@ -159,15 +161,16 @@
     left: 0;
     right: 0;
     z-index: 2;
+    border: 3px solid red;
     // max-height: 0;
 
-    width: 20em;
+    width: 25em;
     overflow: hidden;
     transition: max-height 0.3s ease-out;
 
     &.visible {
       display: block;
-      max-height: 20em;
+      max-height: 25em;
       padding: 2em;
 
       li a {
